--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,12 @@
---- 
-- include: install.yml
-- { include: monitoring.yml, when: mongodb_server }
-- { include: logging.yml,    when: mongodb_server }
-- { include: configure.yml,  when: mongodb_server }
+- name: Fetch package
+  get_url:
+    url: 'http://s3.amazonaws.com/influxdb/influxdb_latest_amd64.deb'
+    dest: '/tmp/influxdb_latest_amd64.deb'
+
+- name: Install package
+  command: dpkg -i /tmp/influxdb_latest_amd64.deb
+
+- name: Run influxdb
+  service:
+    name: influxdb
+    state: started
