--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,5 +9,5 @@ galaxy_info:
       versions:
         - trusty
   categories:
-    - database:influxdb
-    - monitoring
+    - database
+    - database:nosql
