--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,4 @@
 ---
-#influxdb_version:
-
-influxdb_user:
-influxdb_group:
-
-influxdb_server: no
+influxdb_version: 0.9.6.1
 
 influxdb_runtime_root: "{{ runtime_root | default('/var/run') }}/nosql"
