--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,7 @@ driver:
   privileged: true
 
 provisioner:
-  name: playbook-test-ssl
+  name: ansible_playbook
   hosts: test-kitchen
   requirements_path: requirements.yml
 
