better docs ftw

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 influxdb_version: 0.9.6.1
 
-influxdb_runtime_root: "{{ runtime_root | default('/var/run') }}/nosql"
+influxdb_runtime_root: "{{ runtime_root | default('/var/run') }}/influxdb"
